--- a/src/main/webapp/sass/styles.scss
+++ b/src/main/webapp/sass/styles.scss
@@ -1,13 +1,13 @@
 
 
 // Import Bootstrap Compass integration
-@import "bootstrap-compass";
+//@import "bootstrap-compass";
 
 // Import custom Bootstrap variables
 @import "bootstrap-variables";
 
 // Import Bootstrap for Sass
-@import "bootstrap";
+//@import "bootstrap";
 
 body {
 	margin-top:60px;
